--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 solana-sdk = "3.0.0"
 solana-client = "3.0.2"
 tokio = { version = "1.0", features = ["full"] }
+anyhow = "1.0"
+bs58 = "0.5"
+solana-system-interface = "2.0.0"
 
 [lib]
 name = "dz_validator_pda"
